API -> added two use cases, updated docs
