# app/Http/Controllers/ApiController.php
@@ -14,26 +14,50 @@ class ApiController extends Controller
     public function productos()
     {
         $productos = Producto::all();
-        return response()->json($productos);
+        return $this->responseOrError($productos, 'Productos no encontrados');
+    }
+
+    public function producto($id){
+        $producto = Producto::find($id);
+        return $this->responseOrError($producto, 'Producto no encontrado');
     }
 
     public function categorias()
     {
         $categorias = Categoria::all();
-        return response()->json($categorias);
+        return $this->responseOrError($categorias, 'Categorias no encontradas');
     }
+
+    public function categoria($id)
+    {
+        $categoria = Categoria::find($id);
+        return $this->responseOrError($categoria, 'Categoria no encontrada');
+    }
+
 
     public function storePedido(StorePedidoRequest $request)
     {
-        $pedido = Pedido::create($request->validated());
+        try {
+            $pedido = Pedido::create($request->validated());
 
-        foreach ($request->input('productos') as $producto) {
-            $pedido->productos()->attach($producto['id'], ['cantidad' => $producto['cantidad']]);
+            foreach ($request->input('productos') as $producto) {
+                $pedido->productos()->attach($producto['id'], ['cantidad' => $producto['cantidad']]);
+            }
+
+            return response()->json([
+                'message' => 'Pedido creado exitosamente',
+                'pedido' => $pedido,
+            ], 201);
+        } catch (\Exception $e) {
+            return response()->json(['error' => 'No se pudo crear el pedido'], 500);
         }
-
-        return response()->json([
-            'message' => 'Pedido creado exitosamente',
-            'pedido' => $pedido,
-        ], 201);
+    }
+    
+    private function responseOrError($recoveredDataObject, $message){
+        if ($recoveredDataObject) {
+            return response()->json($recoveredDataObject, 200);
+        } else {
+            return response()->json(['error' => $message], 404);
+        }
     }
 }
